[package]
name = "manrfc"
version = "0.1.0"
authors = ["cdzeno"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minus = { version = "^3.3", features = ["static_output", "search"]}
reqwest = { version = "0.11", features = ["blocking"] }
clap = "*"
select = "*"
scraper = "*"
prettytable-rs = "^0.8"